--- a/templates/authentication/login-or-register.html
+++ b/templates/authentication/login-or-register.html
@@ -75,13 +75,14 @@
                     <div class="social-login">
                         <h3>...or login with:</h3>
                         <div class="social-login-buttons">
-                            <a class="btn btn-link-1 btn-link-1-facebook" href="#">
+
+                            <a class="btn btn-link-1 btn-link-1-facebook" href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">
                                 <i class="fa fa-facebook"></i> Facebook
                             </a>
-                            <a class="btn btn-link-1 btn-link-1-twitter" href="#">
+                            <a class="btn btn-link-1 btn-link-1-twitter" href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">
                                 <i class="fa fa-twitter"></i> Twitter
                             </a>
-                            <a class="btn btn-link-1 btn-link-1-google-plus" href="#">
+                            <a class="btn btn-link-1 btn-link-1-google-plus" href="{% url 'social:begin' 'google' %}?next={{ request.path }}">
                                 <i class="fa fa-google-plus"></i> Google Plus
                             </a>
                         </div>
