--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,47 @@
 </head>
 
 <body>
-{% include 'app/header.html' %}
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+
+            <a class="navbar-brand" href="{% url 'index' %}">Restaurant booking</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+
+            <ul class="nav navbar-nav navbar-left">
+                {% block header_links %}
+
+                {% endblock %}
+            </ul>
+
+
+            <ul class="nav navbar-nav navbar-right">
+
+
+                {% if request.user.is_authenticated == False %}
+                    <li>
+                        <a href="{% url 'auth:login' %}">Login</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'auth:register' %}">Register</a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a href="{% url 'auth:logout' %}">Logout</a>
+                    </li>
+                {% endif %}
+
+
+            </ul>
+
+        </div>
+
+    </div>
+
+</nav>
 
 
 <div class="container-fluid">
