--- a/templates/guest/profile.html
+++ b/templates/guest/profile.html
@@ -1,28 +1,16 @@
-{% extends 'base.html' %}
+{% extends 'guest/base.html' %}
 
 {% block content %}
+
     <div class="row">
         <div class="col-md-6">
             <h3>
                 {{ user.first_name }} {{ user.last_name }}
                 {% if user.is_staff %}
-                (admin user)
+                    (admin user)
                 {% endif %}
             </h3>
             <table class="table">
-                {% comment %}
-                <thead>
-                <tr>
-                    <th>
-                        Product
-                    </th>
-                    <th>
-                        Payment Taken
-                    </th>
-
-                </tr>
-                </thead>
-                {% endcomment %}
                 <tbody>
                 <tr>
                     <td>
